update generated files from new openapi spec
