# go/model_not_found_error.go
@@ -1,0 +1,22 @@
+/*
+ * Datamonkey API
+ *
+ * Datamonkey is a free public server for comparative analysis of sequence alignments using state-of-the-art statistical models. <br> This is the OpenAPI definition for the Datamonkey API. 
+ *
+ * API version: 1.0.0
+ * Contact: spond@temple.edu
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package datamonkey
+
+type NotFoundError struct {
+
+	// Error message
+	Error string `json:"error"`
+
+	// HTTP status code
+	Status int32 `json:"status"`
+
+	JobId string `json:"job_id,omitempty"`
+}
